@@ -136,7 +136,12 @@ class CategoriesModelCategory extends JModelForm
 			$this->setError($form->getMessage());
 			return false;
 		}
-
+		
+		if(file_exists(JPATH_ADMINISTRATOR.'/components/'.$this->getState('category.extension').'/category.xml'))
+		{
+			$form->load(JPATH_ADMINISTRATOR.'/components/'.$this->getState('category.extension').'/category.xml', true, false);
+		}
+		
 		// Set the access control rules field compoennt value.
 		$form->setFieldAttribute('rules', 'component', $this->getState('category.extension'));
 
