@@ -57,6 +57,7 @@ CATEGORY_OPTIONS_PAGINATION_RESULTS_LABEL="Pagination Results"
 DOWN="Down"
 SHOW_A_FEED_LINK="Show a feed link"
 
+CATEGORY_OPTIONS="Category Options"
 CATEGORY_OPTIONS_LINKED_TITLES_DESC="If set to Yes, the article title will be a link to the article."
 CATEGORY_OPTIONS_LINKED_TITLES_LABEL="Linked Titles"
 CATEGORY_OPTIONS_LINK_CATEGORY_DESC="If set to Yes, and if Show Category is set to Yes, the Category Title will link to a layout showing articles in that Category."
