@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+30-Jan-2010 Hannes Papenberg
+# Fixed translation of parameter labels in com_users
++ Added ability to add a category.xml file to a component to add parameters to com_categories
+
 29-jan-2010 Jean-Marie Simonet
 # Fixed Form field Spacer display
 
